--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,15 @@ body {
 
 
 header {
+  display: flex;
   padding: 20px 35px;
   background-color: #39a6b2;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
   font-weight: bold;
-  display: inline;
   margin: 0;
   font-size: 36px;
   color: #fce138;
@@ -30,7 +32,6 @@ header a {
 }
 
 header nav {
-  float: right;
   margin: 7px 0;
 }
 
