--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box;
+box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -57,20 +57,23 @@ header nav ul li a {
 
 
 footer {
+  justify-content: space-between;
+  flex-wrap: wrap;
   background: #fce138;
   padding: 40px 35px;
   width: 100%;
+  display: flex;
 }
 
 footer h2 {
-  display: inline;
+
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
+
   line-height: 1.5;
   text-align: right;
 }
@@ -87,19 +90,18 @@ section {
   background-image: url('../images/hero-bg.jpeg');
   background-size: cover;
   background-position: center;
-  position: relative;
-  height: 600px;
+  display: flex;
+  jusitify-content: center;
+  flex-wrap: wrap;
 }
 
 .hero-form {
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
+  width: 40%;
+  margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -131,17 +133,33 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 } 
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
 /* HERO STYLES END */
 
 
 /* SECTION TITLE STYLES START */
 .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
-  margin-bottom: 35px;
   color: #024e76;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50px;
 }
 
 .primary-border {
@@ -155,7 +173,7 @@ section {
 
 /* WHAT WE DO STYLES */
 .intro {
-  text-align: center;
+
 }
 
 .intro p {
@@ -164,40 +182,73 @@ section {
   width: 80%;
   margin: 0 auto;
   font-size: 20px;
+  text-align: center;
 }
 
-
+/* start of steps */
 .steps { 
-  text-align: center;
+
   background: #fce138;
 }
 
 .steps div {
-  margin-bottom: 80px;
+
 }
 
 .steps img {
-  width: 15%;
-  margin: 10px 0;
+  flex: 1 12%;
+  margin-right: 20px;
 } 
+
+.step-img img {
+  max-width: 100%;
+}
 
 .steps h3 {
   color: #024e76;
   font-size: 46px;
-  margin-top: 10px;
+  flex: 1 30%;
 }
 
 .steps span {
-  font-size: 38px;
+
 }
 
-.steps p {
-  color: #39a6b2;
-  font-size: 23px;
+.step-text {
+  flex: 12;
 }
+
+.step-text p {
+  color: #39a6b2;
+  font-size: 18px;
+ 
+}
+
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+/* end of steps */
 
 .trainers {
-  text-align: center;
+
 }
 
 .trainer {
@@ -236,7 +287,7 @@ section {
 }
 
 .contact {
-  text-align: center;
+
   background: #024e76;
 }
 
@@ -282,4 +333,8 @@ height: 400px;
 
 .text-right {
   text-align: right;
+}
+
+.flex-row {
+  display: flex;
 }
